--- a/.github/workflows/fix-php-code-style-issues.yml
+++ b/.github/workflows/fix-php-code-style-issues.yml
@@ -1,27 +1,30 @@
 name: "Fix PHP Code Styling"
+# Not sure I'm a fan of this auto committing and fucking up the styling. Just annoying.
+# TODO Research configurable options for pint
 
-on:
-  push:
-    paths:
-      - '**.php'
-
-permissions:
-  contents: write
-
-jobs:
-  php-code-styling:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ github.head_ref }}
-
-      - name: Fix PHP code style issues
-        uses: aglipanci/laravel-pint-action@2.4
-
-      - name: Commit changes
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: Fix styling
+#
+#on:
+#  push:
+#    paths:
+#      - '**.php'
+#
+#permissions:
+#  contents: write
+#
+#jobs:
+#  php-code-styling:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v4
+#        with:
+#          ref: ${{ github.head_ref }}
+#
+#      - name: Fix PHP code style issues
+#        uses: aglipanci/laravel-pint-action@2.4
+#
+#      - name: Commit changes
+#        uses: stefanzweifel/git-auto-commit-action@v5
+#        with:
+#          commit_message: Fix styling
