--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -2,13 +2,16 @@ includes:
     - phpstan-baseline.neon
 
 parameters:
-    level: 4
+    level: 2
     paths:
         - src
         - config
         - database
     tmpDir: build/phpstan
-    checkOctaneCompatibility: true
-    checkModelProperties: true
-    checkMissingIterableValueType: false
+#    checkOctaneCompatibility: true
+#    checkModelProperties: true
+
+
+    ignoreErrors:
+        - '#PHPDoc tag @var#'
 
