--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -11,7 +11,6 @@ parameters:
 #    checkOctaneCompatibility: true
 #    checkModelProperties: true
 
-
-    ignoreErrors:
-        - '#PHPDoc tag @var#'
+	ignoreErrors:
+		- '#^Class App\\Models\\User not found$#'
 
