Update github workflow

--- a/.github/workflows/fix-php-code-style-issues.yml
+++ b/.github/workflows/fix-php-code-style-issues.yml
@@ -1,4 +1,4 @@
-name: "Fix PHP Code Styling"
+#name: "Fix PHP Code Styling"
 # Not sure I'm a fan of this auto committing and fucking up the styling. Just annoying.
 # TODO Research configurable options for pint
 
