--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,14 @@
     "require": {
         "php": "^8.1",
         "filament/filament": "^3.0",
+        "illuminate/contracts": "^10.0|^11.0",
         "spatie/laravel-package-tools": "^1.15.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.1",
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^7.9",
-        "orchestra/testbench": "^8.0",
+        "orchestra/testbench": "^8.0|9.0",
         "pestphp/pest": "^2.1",
         "pestphp/pest-plugin-arch": "^2.0",
         "pestphp/pest-plugin-laravel": "^2.0",
