--- a/composer.json
+++ b/composer.json
@@ -29,14 +29,13 @@
         "barryvdh/laravel-ide-helper": "^3.1",
         "laravel/pint": "^1.0",
         "orchestra/testbench": "^8.0|9.0",
-        "pestphp/pest": "^2.1",
+        "pestphp/pest": "^2.36",
         "pestphp/pest-plugin-arch": "^2.0",
         "pestphp/pest-plugin-laravel": "^2.0",
         "pestphp/pest-plugin-livewire": "^2.1",
         "phpstan/extension-installer": "^1.3",
         "phpstan/phpstan-deprecation-rules": "^1.1",
-        "phpstan/phpstan-phpunit": "^1.3",
-        "phpunit/phpunit": "^10.3"
+        "phpstan/phpstan-phpunit": "^1.3"
     },
     "autoload": {
         "psr-4": {
