--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -5,6 +5,11 @@ on: [push, pull_request]
 jobs:
   tests:
     runs-on: ${{ matrix.os }}
+    env:
+      DB_DATABASE: testing
+      DB_USER: root
+      DB_PASSWORD: root
+
     strategy:
       fail-fast: false
       matrix:
@@ -28,10 +33,11 @@ jobs:
       -   name: Checkout code
           uses: actions/checkout@v4
 
-      -   name: Install SQLite 3
+      -   name: Start MySQL
           run: |
-            sudo apt-get update
-            sudo apt-get install sqlite3
+            sudo /etc/init.d/mysql start
+            mysql -e "CREATE DATABASE IF NOT EXISTS $DB_DATABASE;" -u$DB_USER -p$DB_PASSWORD
+
 
       -   name: Setup PHP
           uses: shivammathur/setup-php@v2
