Revert "fix: automated tests"
This reverts commit 26616126bf4e35816017794aee7d96e72f4c04b6.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -49,6 +49,7 @@ jobs:
           run: |
             composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "filament/filament:${{ matrix.filament }}" --no-interaction --no-update
             composer update --${{ matrix.stability }} --prefer-dist --no-interaction
+            php artisan migrate:fresh --seed
 
       -   name: Setup Problem Matches
           run: |
