--- a/.env.github
+++ b/.env.github
@@ -16,7 +16,7 @@ DB_USERNAME=root
 DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=sync
+CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
